After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690580 - XI2 Regression: Grab ops become "stuck"
XI2 Regression: Grab ops become "stuck"
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other Windows
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-20 23:06 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-02-13 17:33 UTC
See Also:
GNOME target: 3.8
GNOME version: ---


Attachments
display: Pass timestamp to meta_display_end_grab_op (1008 bytes, patch)
2013-02-13 17:20 UTC, drago01
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-12-20 23:06:58 UTC
Steps:

1. Press Alt+F7
2. Move window
3. Click

Expected:

The cursor is ungrabbed

Actual:

The cursor is still grabbed, and needs a second click to un-stick it.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-12-20 23:07:56 UTC
Tracing through the X server calls, it's clear that we're ungrabbing the pointer. This might need someone to add logging statements to the X server to figure out.
Comment 2 Matthias Clasen 2013-02-10 18:07:47 UTC
Ugly regression. Belongs on the 3.8 blocker list.
Comment 3 drago01 2013-02-13 17:20:45 UTC
Created attachment 235917 [details] [review]
display: Pass timestamp to meta_display_end_grab_op

We need to pass the timestamp not the event detail to meta_display_end_grab_op
Comment 4 drago01 2013-02-13 17:33:24 UTC
Attachment 235917 [details] pushed as 579bf21 - display: Pass timestamp to meta_display_end_grab_op

Pushed after IRC review.